--- a/tasty-bdd.cabal
+++ b/tasty-bdd.cabal
@@ -28,6 +28,7 @@ library
                     , HUnit
                     , tagged
                     , pretty-show
+                    , tasty-fail-fast
     default-language: Haskell2010
 
 executable bdd-exe
@@ -36,6 +37,7 @@ executable bdd-exe
     ghc-options:      -Wall
     build-depends:    base, tasty-bdd, tasty
         , tasty-hunit
+        , tasty-fail-fast
     default-language: Haskell2010
 
 source-repository head
