--- a/tasty-bdd.cabal
+++ b/tasty-bdd.cabal
@@ -31,13 +31,15 @@ library
                     , tasty-fail-fast
     default-language: Haskell2010
 
-executable bdd-exe
-    hs-source-dirs:   app
+executable example
+    hs-source-dirs:   example
     main-is:          Main.hs
     ghc-options:      -Wall
-    build-depends:    base, tasty-bdd, tasty
-        , tasty-hunit
-        , tasty-fail-fast
+    build-depends:    base
+                    , tasty-bdd
+                    , tasty
+                    , tasty-hunit
+                    , tasty-fail-fast
     default-language: Haskell2010
 
 source-repository head
