--- a/tasty-bdd.cabal
+++ b/tasty-bdd.cabal
@@ -19,16 +19,18 @@ library
                     , Test.BDD.Language
     ghc-options:      -Wall
     build-depends:    base >= 4.7 && <5
-                    , microlens
+                    , exceptions
                     , free
-                    , tasty
-                    , tasty-hunit
-                    , mtl
-                    , microlens-th
                     , HUnit
-                    , tagged
+                    , microlens
+                    , microlens-th
+                    , mtl
                     , pretty-show
+                    , tagged
+                    , tasty
                     , tasty-fail-fast
+                    , tasty-hunit
+                    , transformers
     default-language: Haskell2010
 
 executable example
@@ -36,10 +38,10 @@ executable example
     main-is:          Main.hs
     ghc-options:      -Wall
     build-depends:    base
-                    , tasty-bdd
                     , tasty
-                    , tasty-hunit
+                    , tasty-bdd
                     , tasty-fail-fast
+                    , tasty-hunit
     default-language: Haskell2010
 
 source-repository head
