--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-9.9
+resolver: lts-9.13
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -39,7 +39,12 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-# extra-deps: []
+extra-deps: 
+- tree-diff-0.0.0.1
+- QuickCheck-2.10.1
+- aeson-1.2.3.0
+- ansi-wl-pprint-0.6.8.1
+
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
