--- a/tasty-bdd.cabal
+++ b/tasty-bdd.cabal
@@ -26,6 +26,7 @@ library
                     , microlens-th
                     , mtl
                     , pretty-show
+                    , pretty
                     , tagged
                     , tasty
                     , tasty-fail-fast
@@ -43,6 +44,9 @@ executable example
                     , tasty-bdd
                     , tasty-fail-fast
                     , tasty-hunit
+                    , aeson
+                    , aeson-qq
+    default-extensions: OverloadedStrings
     default-language: Haskell2010
 
 source-repository head
