--- a/stack.yaml
+++ b/stack.yaml
@@ -44,6 +44,7 @@ extra-deps:
 - QuickCheck-2.10.1
 - aeson-1.2.3.0
 - ansi-wl-pprint-0.6.8.1
+- qm-interpolated-string-0.2.1.0
 
 
 # Override default flag values for local packages and extra-deps
