--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-9.17
+resolver: lts-10.7
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -39,12 +39,7 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: 
-- tree-diff-0.0.0.1
-- QuickCheck-2.10.1
-- aeson-1.2.3.0
-- ansi-wl-pprint-0.6.8.1
-- qm-interpolated-string-0.2.1.0
+extra-deps: []
 
 
 # Override default flag values for local packages and extra-deps
