Fix the test step - use the ghc-specific yaml file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,14 +5,14 @@ jobs:
       - image: library/haskell:8.0.2
     steps:
       - checkout
-      - run: stack test --stack-yaml=stack-8.0.2
+      - run: stack test --stack-yaml=stack-8.0.2.yaml
 
   test-8.2.2:
     docker:
       - image: fpco/stack-build:lts-10 # because library/haskell does not have 8.2.2 yet
     steps:
       - checkout
-      - run: stack test --stack-yaml=stack-8.2.2
+      - run: stack test --stack-yaml=stack-8.2.2.yaml
 
 workflows:
   version: 2
