--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,29 +4,29 @@ jobs:
     docker:
       - image: library/haskell:8.0.2
     steps:
-      - checkout
       - restore_cache:
           keys: 
             - stack-ghc-8.0.2-{{ arch }}
+      - checkout
       - run: stack test --stack-yaml=stack-8.0.2.yaml
       - save_cache:
-        - key: stack-ghc-8.0.2-{{ arch }}
-        - paths:
-            - "/root/.stack"
+          key: stack-ghc-8.0.2-{{ arch }}
+          paths:
+            - /root/.stack
 
   test-8.2.2:
     docker:
       - image: fpco/stack-build:lts-10 # because library/haskell does not have 8.2.2 yet
     steps:
-      - checkout
       - restore_cache:
-          keys: 
+          keys:
             - stack-ghc-8.2.2-{{ arch }}
+      - checkout
       - run: stack test --stack-yaml=stack-8.2.2.yaml
       - save_cache:
-        - key: stack-ghc-8.2.2-{{ arch }}
-        - paths:
-            - "/root/.stack"
+          key: stack-ghc-8.2.2-{{ arch }}
+          paths:
+            - /root/.stack
 
 workflows:
   version: 2
