--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,13 +16,12 @@ jobs:
 
   test-8.2.2:
     docker:
-      - image: library/haskell:8.0.2 # because library/haskell does not have 8.2.2 yet
+      - image: fpco/stack-build:lts-10 # because library/haskell does not have 8.2.2 yet
     steps:
       - checkout
       - restore_cache:
           keys:
             - stack-ghc-8.2.2-{{ arch }}-{{ checksum "stack-8.2.2.yaml" }}
-      - run: stack setup 8.2.2 --stack-yaml=stack-8.2.2.yaml
       - run: stack test --stack-yaml=stack-8.2.2.yaml
       - save_cache:
           key: stack-ghc-8.2.2-{{ arch }}-{{ checksum "stack-8.2.2.yaml" }}
