--- a/stack-8.2.2.yaml
+++ b/stack-8.2.2.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-10.9
+resolver: lts-11.0
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -39,7 +39,8 @@ packages:
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+    - tasty-fail-fast-0.0.3
 
 
 # Override default flag values for local packages and extra-deps
